--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 FREE_CURRENCY_API_KEY=
 FREE_CURRENCY_API_URL=https://api.freecurrencyapi.com/v1/latest?apikey=${FREE_CURRENCY_API_KEY}
+REFRESH_INTERVAL=15
