--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 FREE_CURRENCY_API_KEY=
 FREE_CURRENCY_API_URL=https://api.freecurrencyapi.com/v1/latest?apikey=${FREE_CURRENCY_API_KEY}
 REFRESH_INTERVAL=15
+
+# Crypto API Configuration (optional - CoinGecko is used by default, no key needed)
+CRYPTO_API_KEY=
+CRYPTO_API_SOURCE=coingecko
