config to change screen order, updated BTC logo

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ REFRESH_INTERVAL=15
 # Crypto API Configuration (optional - CoinGecko is used by default, no key needed)
 CRYPTO_API_KEY=
 CRYPTO_API_SOURCE=coingecko
+
+# Screen Order Configuration (comma-separated list)
+# Available screens: bitcoin_prices, exchange_rates
+SCREEN_ORDER=bitcoin_prices,exchange_rates
