added cache for requests

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,12 @@ CRYPTO_API_SOURCE=coingecko
 # Screen Order Configuration (comma-separated list)
 # Available screens: bitcoin_prices, exchange_rates
 SCREEN_ORDER=bitcoin_prices,exchange_rates
+
+# Cache Configuration (in seconds)
+# Default cache time for all screens (default: 60 seconds = 1 minute)
+CACHE_DEFAULT_TTL=60
+
+# Per-screen cache configuration (optional)
+# Format: screen_name:seconds (comma-separated)
+# Example: bitcoin_prices:30,exchange_rates:120
+CACHE_PER_SCREEN=bitcoin_prices:60,exchange_rates:60
