added weather service

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ CRYPTO_API_KEY=
 CRYPTO_API_SOURCE=coingecko
 
 # Screen Order Configuration (comma-separated list)
-# Available screens: bitcoin_prices, exchange_rates
-SCREEN_ORDER=bitcoin_prices,exchange_rates
+# Available screens: bitcoin_prices, exchange_rates, weather
+SCREEN_ORDER=bitcoin_prices,exchange_rates,weather
 
 # Cache Configuration (in seconds)
 # Default cache time for all screens (default: 60 seconds = 1 minute)
@@ -16,5 +16,12 @@ CACHE_DEFAULT_TTL=60
 
 # Per-screen cache configuration (optional)
 # Format: screen_name:seconds (comma-separated)
-# Example: bitcoin_prices:30,exchange_rates:120
-CACHE_PER_SCREEN=bitcoin_prices:60,exchange_rates:60
+# Example: bitcoin_prices:30,exchange_rates:120,weather:300
+CACHE_PER_SCREEN=bitcoin_prices:60,exchange_rates:60,weather:300
+
+# Open Weather API Configuration https://openweathermap.org/ (optional)
+OPEN_WEATHER_API_KEY=your_open_weather_api_key
+OPEN_WEATHER_CITY=your_city_name
+OPEN_WEATHER_STATE=your_state_code # Optional, can be left empty
+OPEN_WEATHER_COUNTRY=your_country_code # Optional, can be left empty
+OPEN_WEATHER_API_URL=https://api.openweathermap.org/data/2.5/weather?q={OPEN_WEATHER_CITY},{OPEN_WEATHER_STATE},{OPEN_WEATHER_COUNTRY}&appid={OPEN_WEATHER_API_KEY}&units=metric
