--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,55 @@
+# Environment files
 .env
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Simulation output files
+*_simulation.png
+currency_display_simulation.png
+
+# Test files
+.coverage
+htmlcov/
+.pytest_cache/
+
+# Logs
+*.log
